# nocturne-local

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  README.md  environment.yml  format.sh  install.sh  run.sh  setup.cfg  setup.py
.github/workflows/: cpp_build.yml  python_build.yml  run_cpp_tests.yml  run_flake8.yml  run_pydocstyle.yml  run_python_tests.yml
algos/box_ddp/: lqr_step.py  mpc.py  pnqp.py  pnqp_jax.py
algos/box_ddp/env_dx/: car.py  car_jax.py
algos/box_ddp/tests/: test_mpc.py
algos/gcsl/: buffer.py  env_utils.py  gcsl.py  gcsl_example.py  goal_env.py  networks.py  policy.py  variants.py
algos/gcsl/rlutil/torch/: __init__.py  pytorch_util.py
algos/ppo/: base_runner.py  env_wrappers.py  nocturne_runner.py
algos/ppo/ppo_utils/: act.py  cnn.py  distributions.py  mlp.py  popart.py  rnn.py
algos/ppo/r_mappo/: r_mappo.py
algos/ppo/r_mappo/algorithm/: rMAPPOPolicy.py  r_actor_critic.py
algos/ppo/utils/: multi_discrete.py  separated_buffer.py  shared_buffer.py  util.py  valuenorm.py
cfgs/: config.py  config.yaml
cfgs/algo/: gcsl.yaml  ppo.yaml
cfgs/algorithm/: APPO.yaml  gcsl.yaml
cfgs/imitation/: config.yaml
cpp/: CMakeLists.txt  run.sh
cpp/include/nocturne_bits/: ImageMatrix.hpp  Lane.hpp  LineType.hpp  Network.hpp  Object.hpp  Road.hpp  RoadLine.hpp  Scenario.hpp  Simulation.hpp  TrafficLight.hpp  Vector2D.hpp  Vehicle.hpp  canvas.h  cyclist.h  json.hpp  kinetic_object.h  ndarray.h  object.h  object_base.h  pedestrian.h  road.h  scenario.h  simulation.h  static_object.h  stop_sign.h  traffic_light.h  utils.hpp  vehicle.h  view_field.h
cpp/include/nocturne_bits/geometry/: aabb.h  aabb_interface.h  box.h  bvh.h  circle.h  circular_sector.h  geometry_utils.h  intersection.h  line_segment.h  morton.h  polygon.h  segment.h  vector_2d.h
cpp/include/nocturne_bits/road/: Lane.hpp  Network.hpp  Road.hpp
cpp/include/nocturne_bits/utils/: sf_utils.h
cpp/src/: Lane.cpp  Network.cpp  Object.cpp  Road.cpp  RoadLine.cpp  Scenario.cpp  Simulation.cpp  TrafficLight.cpp  Vehicle.cpp  kinetic_object.cc  object.cc  road.cc  scenario.cc  simulation.cc  stop_sign.cc  traffic_light.cc  vehicle.cc  view_field.cc
cpp/src/geometry/: bvh.cc  circle.cc  circular_sector.cc  intersection.cc  line_segment.cc  polygon.cc  segment.cc
cpp/src/utils/: sf_utils.cc
cpp/tests/: CMakeLists.txt
cpp/tests/src/: kinetic_object_test.cc  object_test.cc  test_simulation.cpp  view_field_test.cc
cpp/tests/src/geometry/: bvh_test.cc  circular_sector_test.cc  intersection_test.cc  line_segment_test.cc  polygon_test.cc  segment_test.cc
envs/: __init__.py  base_env.py  goal_env.py  imitation_env.py  waypoint_env.py
examples/: create_env.py  example_scenario.json  nocturne_functions.py  rendering.py
examples/imitation_learning/: replay_video.py  waymo_data_loader.py
examples/on_policy_files/: nocturne_runner.py
examples/rllib_files/: run_rllib.py
examples/sample_factory_files/: eval_sample_factory.py  run_sample_factory.py  visualize_sample_factory.py
nocturne/: CMakeLists.txt  __init__.py
nocturne/cpp/: CMakeLists.txt
nocturne/cpp/include/: action.h  canvas.h  cyclist.h  ndarray.h  nocturne  object.h  object_base.h  pedestrian.h  road.h  scenario.h  simulation.h  static_object.h  stop_sign.h  traffic_light.h  vehicle.h  view_field.h
nocturne/cpp/include/geometry/: aabb.h  aabb_interface.h  bvh.h  circle.h  circular_sector.h  geometry_utils.h  intersection.h  line_segment.h  morton.h  point_like.h  polygon.h  range_tree_2d.h  vector_2d.h
nocturne/cpp/include/nocturne_bits/: LineType.hpp  action.h  canvas.h  (+8 more)
nocturne/cpp/src/: object.cc  road.cc  scenario.cc  simulation.cc  stop_sign.cc  traffic_light.cc  view_field.cc
nocturne/cpp/tests/: CMakeLists.txt
nocturne/envs/: __init__.py  base_env.py  wrappers.py
nocturne/pybind11/include/: nocturne.h  numpy_utils.h
nocturne/pybind11/src/: action.cc  nocturne.cc  object.cc  road.cc  scenario.cc  simulation.cc  vector_2d.cc  vehicle.cc
nocturne/python/: action.cc  nocturne.cc  nocturne.h  object.cc  road.cc  scenario.cc  simulation.cc  vector_2d.cc  vehicle.cc
nocturne/utils/eval/: average_displacement.py  collision_rate.py  goal_by_intersection.py  goal_reaching_rate.py
nocturne/utils/imitation_learning/: filters.py  model.py  replay_video.py  train.py  waymo_data_loader.py  waymo_data_loader_v2.py
nocturne_utils/: config.py  corner_case_search.py  density_estimators.py  make_solvable_files.py  nocturne_utils.py  output.json  replay_video.py  run_waymo_constructor.py  subscribers.py  waymo_data_loader.py  waymo_movie.py  waymo_scenario_construction.py  wrappers.py
python/: image.cc  kinetic_object.cc  maths.cpp  nocturne.cc  nocturne.cpp  nocturne.h  numpy_utils.h  object.cc  object.cpp  road.cc  road.cpp  road_line.cpp  scenario.cc  scenario.cpp  simulation.cc  simulation.cpp  vector_2d.cc  vehicle.cc
python/.github/workflows/: cpp_build.yml
scenarios/: basic.json  four_car_intersection.json  intersection.json  twenty_car_intersection.json  two_car_intersection.json
scripts/: run_gcsl_cluster.py  run_ppo_cluster.py  run_sample_factory_cluster.py  utils.py
scripts/cluster_scripts/: run_imitation_cluster.py  run_ppo_cluster.py  run_rllib_cluster.py  run_sample_factory_cluster.py
scripts/data_analysis/: corner_case_search.py  data_analysis.py  speed_test.py
scripts/json_generation/: make_solvable_files.py  run_waymo_constructor.py  waymo_scenario_construction.py
scripts/paper_plots/: create_zsc_plot.py  eval_il_agents.py  eval_sample_factory.py  generate_scenes.py
scripts/visualization/: visualize_waymo_map.py  waymo_movie.py
tests/: demo.ipynb  demo_getters.py  profile_env.py  scenario_test.json  test_config.py  test_density_fitting.ipynb  test_dynamics.py  test_eval_functions.py  test_getters_aggressively.py  test_rl_env.py  test_simulation.py  test_simulation_functions.py  test_state_subscribers.py  test_subscribers.py  test_waymo_simulation.py
tests/.ipynb_checkpoints/: demo-checkpoint.ipynb
utils/: subscribers.py  waymo_scenario_construction.py  wrappers.py
(+56 files in other folders)
